# idemix-c

./: #utils.c#  .gitignore  Makefile  Makefile.am  accumulator.c  attribute.c  bitmap.c  byteorder.h  configure.ac  credentials.c  crypto.c  decompose.c  decompose.h  holder.c  idemix_utils.c  index_vec.c  issuer.c  issuer_key.c  libtool  mpz_vec.c  non_revocation_credential.c  non_revocation_credential_subcheck_t.c  non_revocation_credential_subproof.c  non_revocation_credential_subproof_auxiliary.c  non_revocation_credential_subproof_t.c  non_revocation_credential_subproof_tuple_c.c  non_revocation_key.c  non_revocation_pre_credential.c  non_revocation_pre_credential_prepare.c  non_revocation_subproof.c  nonrev_credential.c  nonrev_credential_request.c  nonrev_credential_response.c  nonrev_credential_subcheck_dump_t.c  nonrev_credential_subproof.c  nonrev_credential_subproof_auxiliary.c  nonrev_credential_subproof_dump_t.c  nonrev_credential_subproof_tuple_c.c  nonrev_key.c  nonrev_pre_credential.c  (+34 more)
doc/: conf.py  example.md  flow.rst  index.rst  interface.md  intro.md
example/: Makefile  Makefile.am  eff.c  gen_pq.c  medium.c  pq.crypto  simple.c  simple_proof.c
include/: idemix.h  idemix_accumulator.h  idemix_attribute.h  idemix_bitmap.h  idemix_byteorder.h  idemix_credentials.h  idemix_crypto.h  idemix_decompose.h  idemix_errno.h  idemix_holder.h  idemix_index_vec.h  idemix_issuer.h  idemix_issuer_key.h  idemix_legacy.h  idemix_mpz_vec.h  idemix_non_revocation_credential.h  idemix_non_revocation_credential_subcheck_t.h  idemix_non_revocation_credential_subproof.h  idemix_non_revocation_credential_subproof_auxiliary.h  idemix_non_revocation_credential_subproof_t.h  idemix_non_revocation_credential_subproof_tuple_c.h  idemix_non_revocation_key.h  idemix_non_revocation_pre_credential.h  idemix_non_revocation_pre_credential_prepare.h  idemix_non_revocation_subproof.h  idemix_nonrev_credential.h  idemix_nonrev_credential_request.h  idemix_nonrev_credential_response.h  idemix_nonrev_credential_subcheck_dump_t.h  idemix_nonrev_credential_subproof.h  idemix_nonrev_credential_subproof_auxiliary.h  idemix_nonrev_credential_subproof_dump_t.h  idemix_nonrev_credential_subproof_tuple_c.h  idemix_nonrev_key.h  idemix_nonrev_pre_credential.h  idemix_nonrev_pre_credential_prepare.h  idemix_operator.h  idemix_pairing.h  idemix_parameters.h  idemix_params.h  (+29 more)
res/: CredentialSchema.proto  ProofHashData.proto
