AM_CPPFLAGS = -I$(srcdir)/../include
bin_PROGRAMS = simple medium gen_pq
simple_SOURCES = simple.c
simple_LDADD = $(srcdir)/../libidemix.la -lgmp -lpbc
medium_SOURCES = medium.c
medium_LDADD = $(srcdir)/../libidemix.la -lgmp -lpbc
gen_pq_SOURCES = gen_pq.c
gen_pq_LDADD = $(srcdir)/../libidemix.la -lgmp -lpbc
